Bug 701662 - Serialize filenames in JS_XDRFunctionObject, r=igor